# snutree2

./: .bandit.yml  .copier-answers.yml  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .yamllint.yml  README.rst  README.txt  README_TEMPLATE.rst  README_TEMPLATE.txt  __main__.spec  brothers_not_knights.csv  chapters.csv  datree.py  default-user-settings.yaml  directory.csv  family_colors.csv  family_tree.py  generate-readme.py  lint.py  makefile  mypy.ini  project.dot  pyproject.toml  pyrightconfig.json  pytest.ini  readme.py  readme.txt  requirements.in  requirements.txt  settings.yaml  setup.py  snutree-gui.py  snutree-qt.py  snutree.py  snutree.spec  todo.txt
.githooks/: pre-commit
docs/: readme-template.rst
examples/chapter/: chapter.dot  config.yaml  directory.csv
examples/custom/: custom.dot  custom_module.py
examples/fake/: config.yaml  fake.csv
examples/fake-chapter/: config-dot.yaml  config.yaml
examples/input/: sigmanu_basic.csv
examples/keyed/: config.py  keyed.dot
examples/sigmanu/: sigmanu.dot
examples/sigmanu-cwru-old/: affiliations.csv  config-input.yaml  config.yaml
examples/sigmanu-example/: config.yaml
examples/sigmanu_basic/: config.py  sigmanu.csv  sigmanu_basic.dot
family_tree/: __main__.py  cli.py  cmd.py  color.py  csv.py  directory.py  dot.py  dotread.py  entity.py  family_tree.py  file.py  node.py  processor.py  reading.py  records.py  schema.py  semester.py  settings.py  settings_schema.py  sql.py  tree.py  utilities.py  writing.py
family_tree/readers/: csv.py  dotread.py  sql.py
new-snutree.git/: config.yaml  config2.yaml  out.dot  setup.py  sigmanu.csv
new-snutree.git/test/: test_core_member_reader.py  (+5 more)
snutree/: __init__.py  __main__.py  api.py  cerberus.py  cli.py  config.py  directory.py  dot.py  entity.py  errors.py  gui.py  indent.py  logging.py  qt.py  semester.py  settings.py  snutree.py  tree.py  utilities.py  voluptuous.py
snutree.git/: README.rst  snutree.py
test/: conftest.py  test_core_member_parser.py  test_core_member_reader.py  test_core_member_write.py  test_model_dot.py  test_sigmanu_affiliation.py  test_tab.py  test_tree_to_dot.py  test_utilities_deep_update.py  test_write_dot.py  test_write_dot_config.py  test_write_dot_model.py  test_write_dot_write.py  test_write_dot_writer.py  test_write_member.py
tests/: conftest.py  test_cli.py  test_cli_chapters_out.dot  test_cli_custom_module.py  test_cli_sigmanu_example_out.dot  test_colors.py  test_combine_names.py  test_deep_update.py  test_dot.py  test_entity.py  test_examples.py  test_gui.py  test_indent.py  test_merge_dicts.py  test_node.py  test_readers.py  test_reading.py  test_records.py  test_semester.py  test_sigmanu.py  test_tree.py  test_writers_dot.py  test_writing.py
(+119 files in other folders)
