[tool.poetry]
name = "snutree"
version = "0.3.0"
description = "Visualize big–little brother/sister relationships in Greek-letter organizations"
authors = ["Lucas Flowers <31171608+lucas-flowers@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.0.1"
pylint = "^2.16.2"
isort = "^5.12.0"
flake8 = "^6.0.0"
yamllint = "^1.29.0"
black = "^23.1.0"
rope = "^1.7.0"
pre-commit = "^3.1.0"
pyupgrade = "^3.3.1"
autoflake = "^2.0.1"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
restructuredtext-lint = "^1.3.2"
pytest-watch = "^4.2.0"
networkx = "^2.6.2"
hypothesis = "^6.15.0"
pydantic = "^1.8.2"
mysqlclient = "^2.0.3"
sshtunnel = "^0.4.0"
types-mysqlclient = "^2.0.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
