[project]
name = "snutree2"
version = "0.1.0"
dependencies = [
    "mysqlclient~=2.2",
    "networkx~=3.4",
    "pydantic~=2.11",
    "sshtunnel~=0.4", # TODO No longer desired, just use `ssh` directly to tunnel
]

[project.optional-dependencies]
dev = [
    "autoflake~=2.3",
    "black~=25.1",
    "flake8~=7.2",
    "hypothesis~=6.131",
    "isort~=6.0",
    "mypy~=1.15",
    "pre-commit~=4.2",
    "pylint~=3.3",
    "pytest-cov~=6.1",
    "pytest-watch~=4.2",
    "pytest~=8.3",
    "pyupgrade~=3.19",
    "restructuredtext-lint~=1.4",
    "snutree2", # Allow examples to access the library, and also puts the `snutree` command in PATH (but right now requirements.txt will point to a non-portable absolute path)
    "types-mysqlclient~=2.2",
    "yamllint~=1.37"
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
snutree = "snutree.cli:main"

[tool.setuptools]
packages = [
    'snutree',
]

[tool.black]
line-length = 120
